--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -45,6 +45,7 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
+					<td>コメント数 : <%= @book.post_comments.count %></td>
 				</tr>
 				<% end %>
 			</tbody>
