--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
 					<tr>
 					<th></th>
 					<th>Title</th>
-					<th>Opinion</th>
+					<th>body</th>
 					<th colspan="3"></th>
 					</tr>
 				</thead>
