--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <div class="body">
-	<% if @book.errors.any? %>
+	<% if@book.errors.any? %>
         <div class="alart-message">
            <h3 class="alart-body"><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h3>
           <ul>
@@ -45,7 +45,18 @@
 					</td>
 					<td><%= link_to book.title, book, class: "book_#{book.id}" %></td>
 					<td><%= book.body %></td>
-					<td>コメント数 : <%= @book.post_comments.count %></td>
+			        <td> <% if book.favorited_by?(current_user) %>
+          	                <%= link_to book_favorites_path(book), method: :delete do %>
+          	                 <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: black;"></i>
+          	                <%= book.favorites.count %>
+          	                <% end %>
+          	            <% else %>
+          	                <%= link_to book_favorites_path(book), method: :post do %>
+          	                  <i class="glyphicon glyphicon-heart" aria-hidden="true" style="color: gray;"></i>
+          	                <%= book.favorites.count %>
+          	                <% end %>
+          	            <% end %></td>
+					<td>コメント数 : <%= book.post_comments.count %></td>
 				</tr>
 				<% end %>
 			</tbody>
