--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,10 +28,11 @@
 			<td>
 				<%= link_to (book.user) do %>
 				<%= attachment_image_tag(book.user, :profile_image, :fill, 50, 50, fallback: "no-image-mini.jpg") %>
-				<% end %>
+		<% end %>
 			</td>
 			<td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
 			<td><%= book.body %></td>
+			<td>コメント数 : <%= book.post_comments.count %></td>
 		</tr>
 		<% end %>
 	</tbody>
